# Multi_Agent

./: .env  .gitignore  README.md  pyproject.toml
logs/: 2026-05-12T08-56-09-00-00_gsm8k-single_UFp7b4KDRUTcbrKuFhcx9h.eval
multi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/gsm8k/: results.md
src/solvers/: debate_solver.py  majority_vote.py  single_agent_solver.py
src/tasks/: gsm8k_task.py  mmlu_task.py  truthfulqa_task.py
